<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/lost_label"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_label"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/scoreLabelValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="100sp" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/tryAgain_button"
        android:textSize="18sp" />

    <Button
        android:id="@+id/backToMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/backToMenu_button"
        android:textSize="18sp" />

</LinearLayout>